--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>лни оепбши гюцнкнбнй</title>
+<title> My first page!</title>
 </head>
 <body>
-<p>лни оепбши юагюж</p>
+  <!-- п╪п╬п╧ п©п╣я─п╡я▀п╧ я┌п╣п╨я│я┌ !-->
+<p> пёп═п░п░! я▐ я│п╬п╥п╢п╟п╩ я│я┌я─п╟п╫п╦я┤п╨я┐ </p>
 </body>
 </html>
